# hsconf

./: LICENSE  README.md  Setup.hs  hsconf.cabal
src/Data/: Conf.hs  Config.hs
src/Data/Conf/: Reader.hs  Types.hs
src/Data/Conf/Reader/: Internals.hs
src/Data/Config/: Reader.hs  Types.hs  Writer.hs
src/Data/Config/Reader/: Internals.hs
