name          : hsconf
version       : 2.0
license       : BSD3
license-file  : LICENSE
author        : Magnus Therning, Hans Hoglund
maintainer    : hans@hanshoglund.se
copyright     : Magnus Therning, 2010, Hans Hoglund 2012
description   : Parses GIT-style configuration files
description   : 
    Parses GIT-style configuration files.
    .
    Based on the hsnini package, by Magnus Therning.

build-type    : Custom
category      : Configuration
cabal-version : >= 1.6

source-repository head
    type     : git
    location : https://github.com/hanshoglund/hsconf.git

library
    hs-source-dirs  : src

    build-depends:
        base        >=4.2 && < 5,
        bytestring  >= 0.9,
        containers  >= 0.4,
        mtl         >= 2.0,
        parsec      >= 3.1

    exposed-modules:
        Data.Config
        Data.Config.Reader
        Data.Config.Writer
    other-modules:
        Data.Config.Reader.Internals
